--- a/public/static/auth.html
+++ b/public/static/auth.html
@@ -5,51 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script>
-        async function handleSignUp(event) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-            const data = Object.fromEntries(formData.entries());
-
-            const response = await fetch('/api/register', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            });
-
-            const result = await response.json();
-            if (response.ok) {
-                localStorage.setItem('token', result.token);
-                localStorage.setItem('userID', result.userID);
-                if (result.role === 'farmer') {
-                    window.location.href = '/farmer/dashboard';
-                } else if (result.role === 'retailer') {
-                    window.location.href = '/retailer/dashboard';
-                }
-            } else {
-                document.getElementById('signup-result').innerText = result.message;
-            }
-        }
-    </script>
 </head>
 <body class="bg-gray-100 p-4">
-    <!-- <div class="header">
-        <a href="/">
-            <img src="/public/assets/PointaFam.png" alt="PointaFam Logo">
-        </a>
-        <span>PointaFam</span>
-    </div> -->
+    <script src="/public/script/script.js"></script>
     <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
         <h1 class="text-3xl font-bold text-center mb-6">Sign Up</h1>
         <form id="signup-form" onsubmit="handleSignUp(event)">
             <div class="mb-4">
-                <input type="text" name="firstName" placeholder="First Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-            </div>
-            <div class="mb-4">
-                <input type="text" name="lastName" placeholder="Last Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                <input type="text" name="username" placeholder="Username" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
             <div class="mb-4">
                 <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
@@ -62,6 +25,9 @@
             </div>
             <div class="mb-4">
                 <input type="text" name="phoneNumber" placeholder="Phone Number" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
+            <div class="mb-4">
+                <input type="text" name="location" placeholder="Location" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
             <div class="mb-4">
                 <select name="role" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
