--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retailer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            height: 100vh;
+        }
+        .content {
+            display: flex;
+            flex: 1;
+            overflow: hidden;
+        }
+        .sidebar {
+            width: 250px;
+            background-color: #2d3748;
+            color: white;
+            flex-shrink: 0;
+        }
+        .main-content {
+            flex: 1;
+            overflow-y: auto;
+            padding: 20px;
+        }
+        .header, .footer {
+            background-color: #2d3748;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
         .bg-agriculture {
             background-image: url('/public/assets/agriculture-bg.jpg');
             background-size: cover;
@@ -13,86 +39,92 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 flex">
+<body class="bg-gray-100">
+    <!-- Header -->
+    <div class="header fixed top-0 left-0 right-0 z-10 flex items-center justify-between">
+        <a href="/">
+            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
+        </a>
+        <h1 class="text-xl font-bold mx-auto">Retailer Dashboard</h1>
+        <div class="w-10"></div> <!-- Placeholder to balance the logo on the left -->
+    </div>
+
+    <!-- Content -->
+    <div class="content mt-16">
+        <!-- Sidebar -->
+        <div class="sidebar p-6 shadow-md">
+            <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
+            <ul>
+                <li class="mb-4"><a href="javascript:void(0);" class="text-blue-300 hover:underline" onclick="showCart()">My Cart</a></li>
+                <li class="mb-4"><a href="javascript:void(0);" class="text-blue-300 hover:underline" onclick="loadProducts()">Available Products</a></li>
+                <li class="mb-4"><a href="javascript:void(0);" class="text-red-500 hover:underline" onclick="logout()">Logout</a></li>
+            </ul>
+        </div>
+
+        <!-- Main Content -->
+        <div class="main-content">
+
+            <div class="bg-agriculture p-6 rounded-lg shadow-md mb-6">
+                <h2 class="text-2xl font-bold">Welcome to your Dashboard</h2>
+                <p>Manage your products, view your cart, and update your profile.</p>
+            </div>
+
+            <div id="products-section" class="mb-6">
+                <h2 class="text-2xl font-bold mb-4">Available Products</h2>
+                <div class="mb-4">
+                    <label for="category" class="block text-gray-700">Select Category:</label>
+                    <select id="category" class="mt-1 block w-full p-2 border border-gray-300 rounded-md" onchange="loadProducts(this.value)">
+                        <option value="">All</option>
+                        <option value="vegetables">Vegetables</option>
+                        <option value="fruits">Fruits</option>
+                        <option value="dairy">Dairy</option>
+                    </select>
+                </div>
+                <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                </div>
+            </div>
+
+            <!-- User Profile Section -->
+            <div id="manage-profile" class="mb-6">
+                <h2 class="text-2xl font-bold mb-4">Manage Profile</h2>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <div class="flex items-center mb-4">
+                        <div class="relative">
+                            <img id="profile-picture" src="profile_picture_url" alt="Profile Picture" class="w-16 h-16 rounded-full mr-4 cursor-pointer" onclick="document.getElementById('profile-picture-input').click()">
+                            <input type="file" id="profile-picture-input" class="hidden" onchange="uploadProfilePicture(event)">
+                        </div>
+                        <div>
+                            <p id="user-username" class="text-lg font-bold">Loading...</p>
+                            <p id="user-email" class="text-gray-600">Loading...</p>
+                            <p id="user-location" class="text-gray-600">Loading...</p>
+                        </div>
+                    </div>
+                    <button onclick="toggleDropdown('edit-profile-form')" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Edit Profile</button>
+                </div>
+            </div>
+
+            <!-- Edit Profile Form -->
+            <div id="edit-profile-form" class="hidden">
+                <form id="update-profile-form" onsubmit="handleProfileUpdate(event)">
+                    <div class="mb-4">
+                        <input type="text" id="edit-username" name="username" placeholder="Username" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <input type="email" id="edit-email" name="email" placeholder="Email" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <input type="text" id="edit-location" name="location" placeholder="Location" class="border p-2 w-full rounded" required>
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Update Profile</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer -->
+    <div class="footer fixed bottom-0 left-0 right-0 z-10">
+        <p>&copy; 2025 PointaFam. All rights reserved.</p>
+    </div>
     <script src="/public/script/script.js"></script>
-    <!-- Sidebar -->
-    <div class="w-1/5 bg-white p-4 shadow-md h-screen flex flex-col justify-between">
-        <div>
-            <div class="mb-4">
-                <a href="/">
-                    <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="w-24 mx-auto">
-                </a>
-            </div>
-            <div class="mb-4 text-center">
-                <h2 class="text-lg font-bold" id="user-name">Loading...</h2>
-                <p class="text-gray-600" id="user-email">Loading...</p>
-                <p class="text-gray-600" id="user-location">Loading...</p>
-            </div>
-            <ul class="space-y-3">
-                <li><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="showCart()">My Cart</a></li>
-                <li><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="loadProducts()">Available Products</a></li>
-            </ul>
-        </div>
-        <div>
-            <h3 class="text-md font-bold mb-2">Manage Profile</h3>
-            <ul class="space-y-3">
-                <li><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="toggleDropdown('edit-profile-form')">Edit Profile</a></li>
-                <li><a href="javascript:void(0);" class="text-red-500 hover:underline" onclick="logout()">Logout</a></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="w-4/5 p-6">
-        <h1 class="text-3xl font-bold mb-6 text-center">Retailer Dashboard</h1>
-
-        <div class="bg-agriculture p-6 rounded-lg shadow-md mb-6">
-            <h2 class="text-2xl font-bold">Welcome to your Dashboard</h2>
-            <p>Manage your products, view your cart, and update your profile.</p>
-        </div>
-
-        <div id="products-section" class="mb-6">
-            <h2 class="text-2xl font-bold mb-4">Available Products</h2>
-            <div class="mb-4">
-                <label for="category" class="block text-gray-700">Select Category:</label>
-                <select id="category" class="mt-1 block w-full p-2 border border-gray-300 rounded-md" onchange="loadProducts(this.value)">
-                    <option value="">All</option>
-                    <option value="vegetables">Vegetables</option>
-                    <option value="fruits">Fruits</option>
-                    <option value="dairy">Dairy</option>
-                </select>
-            </div>
-            <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            </div>
-        </div>
-    </div>
-
-    <div id="cart-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden">
-        <div class="bg-white p-6 rounded-lg shadow-lg w-3/4 max-w-3xl">
-            <div class="flex justify-between items-center mb-4">
-                <h2 class="text-2xl font-bold">My Cart</h2>
-                <button onclick="hideCart()" class="text-gray-600 hover:text-gray-900">&times;</button>
-            </div>
-            <div id="cart-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            </div>
-        </div>
-    </div>
-
-    <div id="edit-profile-form" class="hidden">
-        <form id="update-profile-form" onsubmit="handleProfileUpdate(event)">
-            <div class="mb-4">
-                <input type="text" id="edit-first-name" name="firstName" placeholder="First Name" class="border p-2 w-full rounded" required>
-            </div>
-            <div class="mb-4">
-                <input type="text" id="edit-last-name" name="lastName" placeholder="Last Name" class="border p-2 w-full rounded" required>
-            </div>
-            <div class="mb-4">
-                <input type="email" id="edit-email" name="email" placeholder="Email" class="border p-2 w-full rounded" required>
-            </div>
-            <div class="mb-4">
-                <input type="text" id="edit-location" name="location" placeholder="Location" class="border p-2 w-full rounded" required>
-            </div>
-            <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Update Profile</button>
-        </form>
-    </div>
 </body>
 </html>
